tela de historico, menu e ajustes

--- a/Android Nativo/CalcSalute/app/src/main/res/layout/activity_login.xml
+++ b/Android Nativo/CalcSalute/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewAltura2" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/entrarBotao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="53dp"
