--- a/Android Nativo/CalcSalute/app/src/main/res/layout/activity_imc_result.xml
+++ b/Android Nativo/CalcSalute/app/src/main/res/layout/activity_imc_result.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1D2555"
+    android:background="#1D4683"
     tools:context=".imc_result">
 
     <TextView
         android:id="@+id/textViewImc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginLeft="132dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginLeft="104dp"
         android:layout_marginTop="268dp"
         android:text="Seu imc é 40"
         android:textColor="#ECE3E3"
@@ -25,13 +25,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="61dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
         android:layout_marginBottom="342dp"
         android:text="ttextoIMc"
         android:textColor="#F4EFEF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textViewImc"
-        app:layout_constraintTop_toBottomOf="@+id/textViewImc" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewImc"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
